--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -1,50 +1,75 @@
 <!DOCTYPE html>
-<html lang="utf-8">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="../css/popup.css">
-  </head>
-  <body>
-    <div class="app">
-      <p id="link-show" class="link-show"></p>
-      <div class="custom-form">
-        <form id="form">
-          <div class="form-item">
-            <span>Host: </span>
-            <input autocomplete="off" type="text" name="hostValue" autofocus></input>
-          </div>
-          <div class="form-item">
-            <span>Path: </span>
-            <input autocomplete="off" type="text" name="pathValue"></input>
-          </div>
-          <div class="form-item">
-            <span>Query: </span>
-            <input autocomplete="off" type="text" name="queryValue"></input>
-          </div>
-        </form>
-      </div>
-      <div class="load-container" id="load-container">
-        <div class="header">
-          <div>域名</div><div>路径</div><div>参数</div>
-        </div>
-        <div class="container-list">
-          <ul id="host-list" class="ul"></ul>
-          <ul id="path-list" class="ul"></ul>
-          <ul id="query-list" class="ul"></ul>
-      </div>
-      </div>
-      <div id="reminder" class="remind"></div>
-      <div class="operation">
-        <div id="add-btn" class="button add-btn">保存</div>
-        <div id="load-btn" class="button load-btn">访问</div>
-      </div>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+    }
+    .wrap {
+      margin: 0 5px;
+    }
+    .btn:hover {
+      background: #f3f3f3;
+    }
+    .btn.active {
+      border-color: brown;
+    }
+    .item {
+      padding: 5px;
+      display: flex;
+      align-items: center;
+    }
+    .item-txt {
+      font-size: 16px;
+      white-space: nowrap;
+      margin-right: 5px;
+    }
+    .switch-btn {
+      cursor: pointer;
+      display: inline-block;
+      width: 40px;
+      height: 15px;
+      background: #aaa;
+      border-radius: 15px;
+      border: 1px solid #aaa;
+    }
+    
+    .switch-btn::after {
+      content: '';
+      display: block;
+      background-color: #fff;
+      margin-top: 1px;
+      width: 12px;
+      height: 12px;
+      border: 1px solid #f3f3f3;
+      border-radius: 100%;
+    }
+    .item.active .switch-btn {
+      background-color: #f60;
+      border: 1px solid #f60;
+    }
+    .item.active .switch-btn::after {
+      transform: translateX(26px);
+    }
+  </style>
+  <script src="../static/js/jquery.js"></script>
+</head>
+<body>
+  <div class="wrap">
+    <div class="item" id="huidu">
+      <div class="item-txt">灰度</div>
+      <div class="switch-btn"></div>
     </div>
-    <footer class="footer">
-      <div id="autoOption"></div>
-      © <span id="year">2020</span> tnfe -
-        <a class="gtx-a" id="options-link" target="_blank" href="options.html">扩展程序选项</a> -
-        <a class="gtx-a" id="translate-link" target="_blank" href="https://github.com/bohrzhang/wukong-chrome-plugin">Github</a>
-    </footer>
-    <script src="../js/popup.js"></script>
-  </body>
+    <div class="item" id="dev">
+      <div class="item-txt">调式</div>
+      <div class="switch-btn"></div>
+    </div>
+  </div>
+  <script src="../js/popup.js"></script>
+</body>
 </html>
