--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -66,7 +66,11 @@
       <div class="switch-btn"></div>
     </div>
     <div class="item" id="dev">
-      <div class="item-txt">调式</div>
+      <div class="item-txt">多花prd调式</div>
+      <div class="switch-btn"></div>
+    </div>
+    <div class="item" id="cdn-huidu">
+      <div class="item-txt">微组件cdnjs灰度</div>
       <div class="switch-btn"></div>
     </div>
   </div>
